@@ -1,12 +1,12 @@
 package microtrafficsim.ui.preferences.model;
 
+import java.util.ArrayList;
+
 import microtrafficsim.core.map.style.StyleSheet;
+import microtrafficsim.core.map.style.impl.DarkMonochromeStyleSheet;
 import microtrafficsim.core.map.style.impl.DarkStyleSheet;
 import microtrafficsim.core.map.style.impl.LightMonochromeStyleSheet;
 import microtrafficsim.core.map.style.impl.LightStyleSheet;
-import microtrafficsim.core.map.style.impl.DarkMonochromeStyleSheet;
-
-import java.util.ArrayList;
 
 /**
  * @author Dominic Parga Cacheiro
@@ -32,8 +32,8 @@ public class VisualizationModel extends PreferencesModel {
 
     public StyleSheet instantiate(int selectedIndex) {
         try {
-            return styleSheets.get(selectedIndex).newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return styleSheets.get(selectedIndex).getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
             e.printStackTrace();
         }
 
